# mcp-zotero

./: .gitignore  README.md  pyproject.toml
config/: cursor-mcp.template.json
src/mcp_zotero/: __init__.py  __main__.py  server.py
src/mcp_zotero/config/: __init__.py  settings.py
src/mcp_zotero/integrations/: __init__.py
src/mcp_zotero/integrations/zotero/: __init__.py  client.py  duplicates.py  embeddings.py  metadata_fetch.py  pdf_utils.py  semantic_index.py
src/mcp_zotero/prompts/: __init__.py  builtin_prompts.py
src/mcp_zotero/resources/: __init__.py  builtin_resources.py
src/mcp_zotero/tools/: __init__.py  zotero_tools.py
